<?xml version="1.0"?>
<package>
  <name>hrisys_gazebo_tutorials</name>
  <version>0.0.0</version>
  <description>The hrisys_gazebo_tutorials package</description>

  <maintainer email="ssb@todo.todo">ssb</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
